--- a/code-env/python/spec/requirements.txt
+++ b/code-env/python/spec/requirements.txt
@@ -1,4 +1,4 @@
 openpyxl==3.0.5
 pathvalidate==2.3.0
-numpy==1.19.5; python_version < '3.8'
-numpy>1.19,<1.24; python_version >= '3.8'
+numpy==1.20; python_version < '3.8'
+numpy>=1.22,<=1.24.1; python_version >= '3.8'
